2011-01-01  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi4)
	(ebuild-mode-keywords-functions-eapi4): New variables for keywords
	and functions of EAPI 4.
	(ebuild-mode-keywords-functions-default):
	Add default_src_install() function.

2010-12-12  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gnome2-utils):
	Add gnome2_schemas_savelist(), gnome2_schemas_update() functions

2010-11-23  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-elisp-common):
	Add elisp-need-emacs function.

2010-11-04  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-darcs):
	Add darcs_patchcount() function

2010-10-25  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-common):
	Added texlive-common.eclass
	(ebuild-mode-keywords-deprecated): python_mod_compile() is deprecated
	(ebuild-mode-keywords-python): Add python_abi_depend() function

2010-10-24  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-module):
	Add texlive-module_synonyms_to_language_lua_line() and
	texlive-module_make_language_lua_lines() functions

2010-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.18 released.

2010-10-18  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-scons-utils):
	Add new eclass scons-utils
	(ebuild-mode-keywords-java-ant-2): Add java-ant_remove-taskdefs()
	function
	(ebuild-mode-keywords-eutils): Add path_exists() function

2010-10-16  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-commands-list): Alphabetic order.
	Add "cleanrm", "depend", "fetchall", "info", and "pretend".

	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic):
	Update list of functions. Patch by Thomas Kahle <tom111@gmx.de>
	in bug 341255.

2010-10-14  Ulrich Mueller  <ulm@gentoo.org>
