@@ -523,10 +523,10 @@
 
 (defvar ebuild-mode-keywords-ruby-fakegem
   '(("ruby_fakegem_gemsdir" "ruby_fakegem_doins" "ruby_fakegem_newsins"
-     "ruby_fakegem_genspec" "ruby_fakegem_binwrapper" "all_fakegem_compile"
+     "ruby_fakegem_genspec" "ruby_fakegem_binwrapper" "ruby_fakegem_install_gemspec"
+     "ruby_fakegem_metadata_gemspec" "all_fakegem_compile" "all_fakegem_install" "all_ruby_install"
      "all_ruby_unpack" "all_ruby_compile" "each_fakegem_test" "each_ruby_test"
-     "each_fakegem_install" "each_ruby_install" "all_fakegem_install"
-     "all_ruby_install")
+     "each_fakegem_install" "each_ruby_install")
     font-lock-type-face))
 
 (defvar ebuild-mode-keywords-ruby-ng
